Fix 286481 - Unable to open attachments in encrypted messages

The node has to get a correct extra content and the filename must be
correctly point to the attachments inside the encrypted message.

BUG: 286481
BUG: 300937
FIXED-IN: 4.11.3
REVIEW: 113361